# klixx-web

./: .gitignore  CNAME  deploy.sh  index.html  package-lock.json  package.json  vite.config.js
assets/: index.18b1f534.css  index.ad56116b.js  klixx.38e7cde5.sqlite  vendor.2e5778d0.js
scripts/: init_db.py  pyproject.toml  update_db.py
scripts/src/: selectors.py  utils.py
src/: App.vue  main.js
src/components/: BarChart.vue  ColorCorrectionButton.vue  DoughnutChart.vue  Home.vue  HorizontalBarChart.vue  LineChart.vue  Loader.vue  ScatterChart.vue  Table.vue  TableRow.vue  Title.vue  VultureKing.vue
