[tool.poetry]
name = "klixx-scripts"
version = "0.1.0"
description = ""
authors = ["Fabian Allendorf <fabian.allendorf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
